--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,9 +74,9 @@ img {
   height: auto;
 }
 
-/* Transition defaults */
+/* Transition defaults - excludes opacity/transform to avoid conflicts with Framer Motion */
 * {
-  transition-property: color, background-color, border-color, opacity, transform, box-shadow;
+  transition-property: color, background-color, border-color, box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
